# CommercialNetwork

./: .gitignore  LICENSE  pyproject.toml
comm_net_app/: apps.py  models.py  serializers.py  urls.py  views.py
comm_net_app/cooperation/: views.py
comm_net_app/migrations/: 0001_initial.py  0002_remove_organization_supplier_organization_supplier.py  0003_alter_organization_supplier.py  0004_remove_organization_debt_debt.py  0005_alter_debt_supplier.py  0006_alter_debt_organization.py  0007_alter_organization_email.py  0008_rename_supplier_organization_partner.py  0009_remove_organization_partner_organization_diller_and_more.py
comm_net_app/organization_crud/: serializers.py  views.py
comm_net_app/products_crud/: serializers.py  views.py
config/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: create_simple_user.py  csu.py
users/migrations/: 0001_initial.py  0002_user_moderator_user_organization.py
